--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ repositories {
 }
 
 dependencies {
+    compile group: 'joda-time', name: 'joda-time', version: '2.3'
+    compile group: 'io.swagger', name: 'swagger-annotations', version: '1.5.22'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
