--- a/mois-react-ui/package.json
+++ b/mois-react-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.3.5",
     "bootstrap": "4.1.3",
     "react": "^16.8.4",
     "react-cookie": "3.0.4",
