--- a/mois-react-ui/package.json
+++ b/mois-react-ui/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.4",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.8",
+    "react-table": "^6.9.2",
     "reactstrap": "6.5.0"
   },
   "scripts": {
