--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,10 @@ repositories {
 }
 
 dependencies {
+    compile group: 'ma.glasnost.orika', name: 'orika-core', version: '1.4.2'
     compile group: 'joda-time', name: 'joda-time', version: '2.3'
     compile group: 'io.swagger', name: 'swagger-annotations', version: '1.5.22'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
