--- a/mois-react-ui/package.json
+++ b/mois-react-ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.3.5",
     "bootstrap": "4.1.3",
+    "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-cookie": "3.0.4",
     "react-dom": "^16.8.4",
